Changed layout of project page; fixed spacing on main page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,6 +43,7 @@ p {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     line-height: 40px;
+    padding: 1em 0;
 }
 
 /***
@@ -225,11 +226,13 @@ hr {
     width: 90vw;
     height: 100vh;
     flex-wrap: wrap;
+    align-content: flex-start;
+
     justify-content: center;
     transition: all 1s ease;
 }
 
-.projImg {
+.projIcon {
     width: 200px;
     height: 200px;
     margin: 1vh 1vw;
@@ -237,7 +240,7 @@ hr {
 
 }
 
-.projImg:hover {
+.projIcon:hover {
     transform: scale(1.2);
 }
 
@@ -268,6 +271,8 @@ hr {
 
 .logoProjPage {
     font-size: 40px;
+    margin: 0;
+    padding: 0;
 }
 
 .projTitle:hover {
@@ -281,29 +286,31 @@ hr {
 
 .gridProject {
     width: 90%;
-    margin: 0 2.5%;
-    display: grid;
-    grid-template-areas: 'finalImage text';
-    grid-gap: 2em;
-    padding: 1em;
+    margin: 0 5%;
+    display: flex;
 }
 
 .projectImg {
-    grid-area: finalImage;
-    padding: 2em 0 0 0;
-    margin: 0;
-    max-width: 100%;
-    height: auto;
+    padding: 1em 0;
+    margin: 0 0 2% 0;
+    width: 40%;
+    height: 30%;
     clear: both;
 }
 
 .textGridContainer {
     grid-area: text;
     margin: 0;
-    padding: 0;
+    padding: 0 1em;
     line-height: 0.5;
     position: relative;
 }
+
+.textGridContainer p {
+    margin: 1.5em 0;
+    padding: 0;
+}
+
 
 /***
     On the typography page, there are three images displayed instead of just one.
